fixes overlap issue with embiggen posts button
silly atesh, we don't need a z-index of 666

--- a/Extensions/shorten_posts.css
+++ b/Extensions/shorten_posts.css
@@ -19,7 +19,7 @@
 	cursor: pointer;
 	border-radius: 0px 0px 5px 5px;
 	border-top: 1px solid rgba(0,0,0,0.33);
-	z-index: 666;
+	z-index: 89;
 }
 
 .xkit-shorten-posts-embiggen:hover {
